# multimodal-retrieval-benchmark

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  RESEARCH.md
examples/: run_demo.py
notebooks/: flickr30k_benchmark.ipynb
src/: __init__.py  models.py
src/analysis/: failure_analyzer.py  query_categorizer.py
src/backbone/: clip_encoder.py
src/benchmark/: evaluator.py
src/data/: dataset_loader.py
src/indexing/: embedding_index.py
src/reporting/: report_generator.py
src/retrieval/: hard_negative_reranking.py  image_to_text.py  text_to_image.py
tests/: test_clip_encoder.py  test_retrieval_metrics.py
tests/fixtures/: mock_dataset.py
