[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "multimodal-retrieval-benchmark"
version = "1.0.0"
description = "Zero-shot cross-modal retrieval benchmark using CLIP on Flickr30K."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Adnan Hassnain", email = "" }
]
keywords = [
  "multimodal retrieval", "CLIP", "cross-modal", "zero-shot",
  "image-text retrieval", "Flickr30K", "contrastive learning"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.1.0",
  "transformers>=4.36.0",
  "Pillow>=10.0.0",
  "numpy>=1.24.0",
  "faiss-cpu>=1.7.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "flake8>=6.1",
  "black>=24.0",
  "isort>=5.13",
  "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/adnaan512/multimodal-retrieval-benchmark"
Source = "https://github.com/adnaan512/multimodal-retrieval-benchmark"
Issues = "https://github.com/adnaan512/multimodal-retrieval-benchmark/issues"
Kaggle = "https://www.kaggle.com/code/adnanhassnain/multimodal-retrieval-benchmark"

[project.scripts]
mrb = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 130
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 130

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
